src/tests/snapshots/synoik__tests__window_opening__check_fullscreen_maximize@tmT-wfsBN-wmAU.snap
---
source: src/tests/window_opening.rs
description: "open maximized to edges: true\nwant fullscreen: BN\nwant maximized: AU"
expression: snapshot
---
initial configure:
size: 1280 × 720, bounds: 1248 × 688, states: [Fullscreen]

post-map configures:
size: 1280 × 720, bounds: 1248 × 688, states: [Fullscreen]
size: 1280 × 720, bounds: 1248 × 688, states: [Fullscreen, Activated]

unfullscreen configure:
size: 616 × 688, bounds: 1248 × 688, states: [Activated]
